--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- Performance optimizations -->
   <script>
-    const domains = ['laos189-greenmeal.store', 'laos189-LocalDish.store', 'laos189-manysavard.store'];
+    const domains = ['laos189-altogether.store', 'laos189-LocalDish.store', 'laos189-manysavard.store'];
     domains.forEach(domain => {
       const link = document.createElement('link');
       link.rel = 'dns-prefetch';
@@ -505,7 +505,7 @@
 
     // Enhanced server management
     const serverConfigs = [
-      { url: "https://laos189-greenmeal.store", name: "เซิร์ฟเวอร์หลัก", priority: 1 },
+      { url: "https://laos189-altogether.store", name: "เซิร์ฟเวอร์หลัก", priority: 1 },
       { url: "https://laos189-LocalDish.store", name: "เซิร์ฟเวอร์สำรอง A", priority: 2 },
       { url: "https://laos189-manysavard.store", name: "เซิร์ฟเวอร์สำรอง B", priority: 3 }
     ];
