--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- Performance optimizations -->
   <script>
-    const domains = ['laos189-LuxeJewelry.store', 'laos189-SlowLife.store', 'laos189-Atelier.store'];
+    const domains = ['laos189-LuxeJewelry.store', 'laos189-Supply.store', 'laos189-Atelier.store'];
     domains.forEach(domain => {
       const link = document.createElement('link');
       link.rel = 'dns-prefetch';
@@ -506,7 +506,7 @@
     // Enhanced server management
     const serverConfigs = [
       { url: "https://laos189-LuxeJewelry.store", name: "เซิร์ฟเวอร์หลัก", priority: 1 },
-      { url: "https://laos189-SlowLife.store", name: "เซิร์ฟเวอร์สำรอง A", priority: 2 },
+      { url: "https://laos189-Supply.store", name: "เซิร์ฟเวอร์สำรอง A", priority: 2 },
       { url: "https://laos189-Atelier.store", name: "เซิร์ฟเวอร์สำรอง B", priority: 3 }
     ];
 
