--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- Performance optimizations -->
   <script>
-    const domains = ['laos189-anderson.store ', 'laos189-Supply.store', 'laos189-Atelier.store'];
+    const domains = ['laos189-anderson.store ', 'laos189-Supply.store', 'ufabetlao-Durian.store '];
     domains.forEach(domain => {
       const link = document.createElement('link');
       link.rel = 'dns-prefetch';
@@ -507,7 +507,7 @@
     const serverConfigs = [
       { url: "https://laos189-anderson.store ", name: "เซิร์ฟเวอร์หลัก", priority: 1 },
       { url: "https://laos189-Supply.store", name: "เซิร์ฟเวอร์สำรอง A", priority: 2 },
-      { url: "https://laos189-Atelier.store", name: "เซิร์ฟเวอร์สำรอง B", priority: 3 }
+      { url: "https://ufabetlao-Durian.store ", name: "เซิร์ฟเวอร์สำรอง B", priority: 3 }
     ];
 
     // Shuffle servers with weighted randomization
