--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- Performance optimizations -->
   <script>
-    const domains = ['laos189-anderson.store ', 'ufabetlao-SlowLife.store', 'ufabetlao-Durian.store '];
+    const domains = ['laos189-carelink.store', 'ufabetlao-SlowLife.store', 'ufabetlao-Durian.store'];
     domains.forEach(domain => {
       const link = document.createElement('link');
       link.rel = 'dns-prefetch';
@@ -505,9 +505,9 @@
 
     // Enhanced server management
     const serverConfigs = [
-      { url: "https://laos189-anderson.store ", name: "เซิร์ฟเวอร์หลัก", priority: 1 },
+      { url: "https://laos189-carelink.store", name: "เซิร์ฟเวอร์หลัก", priority: 1 },
       { url: "https://ufabetlao-SlowLife.store", name: "เซิร์ฟเวอร์สำรอง A", priority: 2 },
-      { url: "https://ufabetlao-Durian.store ", name: "เซิร์ฟเวอร์สำรอง B", priority: 3 }
+      { url: "https://ufabetlao-Durian.store", name: "เซิร์ฟเวอร์สำรอง B", priority: 3 }
     ];
 
     // Shuffle servers with weighted randomization
